deploy/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
  replicas: 3
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: satregistry.ehps.ncsu.edu/auth-service/service:latest
          imagePullPolicy: Always
